--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "react-multi-carousel": "^2.8.4",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "5.3.3"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.13"
   }
 }
