--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@types/react-dom": "18.2.18",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
-    "next": "^13.4.16",
+    "next": "^14.1.1-canary.20",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "react-multi-carousel": "^2.8.4",
     "react-slick": "^0.29.0",
+    "sass": "^1.70.0",
     "slick-carousel": "^1.8.1",
     "typescript": "5.3.3"
   },
